<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_witchFragment_victimText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/witchSave"/>

    <ListView
        android:id="@+id/lv_witchfFragment_victimUsernameList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_witchFragment_victimText"
        android:choiceMode="singleChoice">
    </ListView>

    <TextView
        android:id="@+id/tv_witchFragment_aliveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_witchfFragment_victimUsernameList"
        android:text="@string/witchKill"/>

    <ListView
        android:id="@+id/lv_witchfFragment_aliveUsernameList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_witchFragment_aliveText"
        android:choiceMode="singleChoice">
    </ListView>

    <Button
        android:id="@+id/btn_witchFragment_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_witchfFragment_aliveUsernameList"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"/>

</RelativeLayout>